Mon 30 May 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update CDN link
	* Fix HTML structure of index.html

Fri 25 Dec 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Tidy up repo

Thu 11 Oct 2018 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial import ;)