@@ -1,0 +1,5 @@
+/.cache
+/node_modules
+package-lock.json
+/dst/*
+!/dst/index.html
