@@ -1,0 +1,20 @@
+.cache
+.git
+img
+node_modules
+
+.autoenv*
+.env*
+.dockerignore
+.gitignore
+.npmignore
+.npmrc
+npm-debug.log
+tsconfig.json
+tslint.json
+rollup.config.js
+watch.json
+Dockerfile
+Makefile
+
+package-lock.json
