@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet pretetch" href="https://fonts.googleapis.com/css?family=Krub">
     <link rel="stylesheet prefetch" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <div class="container">
