@@ -1,0 +1,40 @@
+{
+  "name": "tusk",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://git.sr.ht/~grauwoelfchen/tusk"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "scripts": {
+    "build:production": "rollup -c --configBuildProduction",
+    "build:development": "rollup -c --configBuildDevelopment",
+    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "test": "echo \"error: no test specified\" && exit 1",
+    "watch:build": "rollup -w -c --configBuildDevelopment",
+    "watch:lint": "onchange 'src/**/*' -- npm run lint"
+  },
+  "author": "Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>",
+  "license": "MIT",
+  "devDependencies": {
+    "@rollup/plugin-buble": "0.21.3",
+    "@rollup/plugin-commonjs": "21.0.1",
+    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-node-resolve": "13.0.6",
+    "@rollup/plugin-replace": "3.0.0",
+    "rollup": "2.58.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-strip": "1.2.2",
+    "rollup-plugin-stylus-compiler": "1.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "0.31.1",
+    "stylint": "^0.9.10",
+    "stylus": "0.55.0",
+    "tslint": "6.1.3",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "4.5.2"
+  }
+}
