@@ -1,4 +1,5 @@
 Mon 30 May 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Introduce Rollup
 	* Update CDN link
 	* Fix HTML structure of index.html
 
